2002-09-15  Marcus Brinkmann  <marcus@gnu.org>

	* getty.c: Include <termios.h>.
	(set_speed): New function.
	(main): Take linespec from argc[1], not argc[2].  Call set_speed.

2002-03-23  James A. Morrison  <ja2morri@uwaterloo.ca>

	* console-run.c (open_console): Use ERR, not errno.

2001-12-20  Marcus Brinkmann  <marcus@gnu.org>

	* runsystem.sh: For now, this requires bash.

2001-11-21  Roland McGrath  <roland@frob.com>

	* runttys.c (setup_terminal, add_terminal, init_ttys): Check for
	malloc failures.
	(add_terminal): Fix type used for sizeof calculation in realloc.
	(init_ttys): Likewise.

2001-11-21  Ryan M Golbeck <rmgolbeck@uwaterloo.ca>

	* runttys.c (setup_terminal: make_args): Fixed off by one error.

2001-08-20  Roland McGrath  <roland@frob.com>

	* runsystem.sh: Don't check for MULTIBOOT_CMDLINE environment variable.
	Instead, expect it as normal arguments from init.

2001-06-08  Roland McGrath  <roland@frob.com>

	* rc.sh: Start /hurd/mach-defpager before swapon.

2001-06-07  Roland McGrath  <roland@frob.com>

	* rc.sh: Include $? value in message about unexpected fsck exit.

2001-01-17  Neal H Walfield   <neal@cs.uml.edu>

	* console-run.c (open_console): Conform to new
	fshelp_start_translator semantics.

1999-09-23  Mark Kettenis  <kettenis@gnu.org>

	* getty.c (main): Report an error if login_tty failed.

1999-09-22  Roland McGrath  <roland@baalperazim.frob.com>

	* getty.c: Undo last change.

	* getty.c (main): Make TTY our controlling terminal with TIOCSCTTY.

1999-09-19  Roland McGrath  <roland@baalperazim.frob.com>

	* runttys.c (main): Only call error if setsid returns -1.
	From Marcus Brinkmann  <Marcus.Brinkmann@ruhr-uni-bochum.de>.

1999-07-20  Roland McGrath  <roland@baalperazim.frob.com>

	* getty.c: Include <utmp.h> for login_tty decl.

1999-09-18  Marcus Brinkmann  <Marcus.Brinkmann@ruhr-uni-bochum.de>

	* runttys.c (run): Only call error if setsid returns -1.
	* console-run.c (open_console): Likewise.
